# 3dep-seamless-duckdb-h3

./: .gitignore  CLAUDE.md  README.md  elevation_h3.ipynb  elevation_h3.py  elevation_h3_clean.ipynb  elevation_h3_clean.py  elevation_h3_v2.ipynb  elevation_h3_v3.ipynb  pyproject.toml
refrences/: new_schema_for_ept_duckdb_h3.ipynb  nyc_taxi_trips.py
