[project]
name = "3dep-seamless-duckdb-h3"
version = "0.1.0"
description = "3DEP seamless elevation visualization with H3 hexagons"
requires-python = ">=3.11"
dependencies = [
    "duckdb==1.4.3",
    "h3>=4.4.2",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "lab>=8.8",
    "lonboard==0.13.0",
    "marimo==0.19.11",
    "matplotlib==3.10.8",
    "morecantile>=1.0.0",
    "numpy==2.2.0",
    "odc-stac==0.5.0",
    "palettable==3.3.3",
    "planetary-computer==1.0.0",
    "pyarrow==18.1.0",
    "pyproj==3.7.2",
    "pystac-client==0.9.0",
]
